--- a/css/responsive.css
+++ b/css/responsive.css
@@ -343,6 +343,7 @@
 		text-align: center;
 		border: 0 !important;
 		padding: 0 !important;
+		font-family: 'Raleway', sans-serif;
 	}
 
 	#logo a.standard-logo { display: inline-block; }
@@ -1612,6 +1613,13 @@
 
 @media (max-width: 479px) {
 
+	#logo {
+		font-size: 24px;
+	}
+	#logo span {
+		position: relative;
+		top: 21px;
+	}
 	.container,
 	#header.full-header .container,
 	.container-fullwidth { width: 310px !important; }
